Fix(): fix CSS overflow on mobile 3

--- a/css/style.css
+++ b/css/style.css
@@ -2522,3 +2522,11 @@ td:before {
 }
 
 }
+
+#summary-container button#toc {
+	display: flex;
+}
+
+#summary-container button.btn .small-only {
+min-width: 320px;
+}
